--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+  	<% flash.each do |name, msg| %>
+  		<%= content_tag(:div, msg, class: "aler alert-#{name}") %>
+  	<% end %>	
+
     <%= yield %>
   </body>
 </html>
