Authorization on links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
   <body>
   	<% flash.each do |name, msg| %>
-  		<%= content_tag(:div, msg, class: "aler alert-#{name}") %>
+  		<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
   	<% end %>
 
     <% if user_signed_in? %>
